--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "letter-count": "^5.2.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "ngx-socket-io": "^4.5.1",
+    "p-queue": "^7.3.4",
     "rx-queue": "^1.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
